<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bluetooth_pairing">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="#cdcdcd"
        android:id="@+id/paired_title_layout">
        <TextView
            android:text="@string/txt_paired_devices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:textColor="#303030"
            android:paddingLeft="5dp"
            android:singleLine="true"
            android:textSize="20sp"
            android:id="@+id/paired_title"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/paired_body_layout"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/paired_body_item"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="12dp"
                android:textStyle="bold"
                android:text="@string/txt_pulse_oximeter"
                android:textColor="#303030"
                android:textSize="18sp"
                android:id="@+id/paired_device_sensors">
            </TextView>
            <TextView
                android:text="@string/txt_paired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="#303030"
                android:textSize="18sp"
                android:id="@+id/paired_device_status"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="30dp">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/paired_body_item">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_alignParentLeft="true"
                android:textStyle="bold"
                android:text="@string/txt_and"
                android:textColor="#303030"
                android:textSize="18sp"
                android:id="@+id/paired_device_product">
            </TextView>
            <TextView
                android:textStyle="bold"
                android:text="@string/txt_us767pbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/paired_device_product"
                android:textColor="#1763cb"
                android:textSize="18sp"
                android:id="@+id/paired_device_model"
                android:layout_marginLeft="5dp">
            </TextView>

        </RelativeLayout>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:text="@string/txt_andbp_model"
            android:textColor="#303030"
            android:textSize="18sp"
            android:id="@+id/paired_device_serial">
        </TextView>
    </LinearLayout>

</LinearLayout>

